--- a/yoga/css/style.css
+++ b/yoga/css/style.css
@@ -1,5 +1,20 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
+body, html {
+  color: #745a82; }
+
 header {
   height: 80px;
   line-height: 80px; }
+
+main .block2-content {
+  left: 100px;
+  top: 30px; }
+main .block2-content-absolute {
+  margin-left: 80px;
+  margin-top: 40px; }
 
 /*# sourceMappingURL=style.css.map */
