--- a/yoga/css/style.css
+++ b/yoga/css/style.css
@@ -3,13 +3,27 @@
   margin: 0;
   box-sizing: border-box; }
 
-body, html {
+body,
+html {
   color: #745a82; }
+
+.letter-sp-3 {
+  letter-spacing: 3px; }
 
 header {
   height: 80px;
   line-height: 80px; }
+  header .color {
+    color: #745a82; }
 
+main .block1 .block1__title {
+  margin-bottom: 50px; }
+main .block1 .backgroud {
+  background-color: #745a82;
+  border: none;
+  min-width: 220px; }
+  main .block1 .backgroud:hover {
+    opacity: 0.8; }
 main .block2-content {
   left: 100px;
   top: 30px; }
