--- a/BKT_Yoga_Nhom1/css/style.scss
+++ b/BKT_Yoga_Nhom1/css/style.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: myFont;
-    src: url('../font/MYRIADPRO-REGULAR.OTF');
+    src: url('../font/OpenSans-Regular.ttf');
 }
 
 $color: #745a82;
